fixed broken css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,6 @@ background-color: #2B384B;
 /* background-image: linear-gradient(315deg, #537895 0%, #09203f 74%); */
 height: 100vh;
 }
-/* html {
+html {
   background-color: #2B384B;
-} */
+}
